[cs-demo] Restyle scrollbars and fix firefox scroll styling

--- a/cs-ui-demo/src/sass/_scrollbar-color.scss
+++ b/cs-ui-demo/src/sass/_scrollbar-color.scss
@@ -1,4 +1,8 @@
 @mixin scrollbar-color {
+	@include css4 {
+		scrollbar-color: cvar(--csd-sidebar-scroll-bg) cvar(--csd-transparent);
+	}
+
 	&::-webkit-scrollbar {
 		width: 1rem;
 	}
