--- a/cs-ui-demo/src/sass/_sidebar-list.scss
+++ b/cs-ui-demo/src/sass/_sidebar-list.scss
@@ -109,6 +109,9 @@
 		flex: 1;
 		overflow-y: auto;
 		overflow-x: hidden;
+		@include css4 {
+			scrollbar-color: cvar(--csd-scroll-thumb-bg) cvar(--csd-transparent);
+		}
 
 		&::-webkit-scrollbar {
 			width: 1rem;
